# va_data_server

./: Cargo.toml  build.rs  conf.json
examples/: simulate.rs  test_channel.rs  test_interval.rs  test_treadsafe_queue.rs
examples_/: simulate.rs  test_interval.rs
src/: analyze_fft.rs  avarage_filter.rs  average_filter.rs  bq.rs  chart.rs  circular_queue.rs  fft_analysis.rs  input_signal.rs  interval.rs  main _simulate.rs  main.rs  main_.rs  main_egui.rs  main_sleep_interval.rs  main_test_channel.rs  main_test_interval.rs  main_test_qeue.rs  main_test_treadsafe_queue.rs  tcp_client.rs  tcp_server.rs  udp_server.rs  ui_app.rs  wait_interval.rs
src/ds/: ds_config.rs  ds_db.rs  ds_ied.rs  ds_line.rs  ds_server.rs
src/dsp_filters/: average_filter.rs  mod.rs  slp_filter.rs
src/fft/: fft_analysis.rs  mod.rs
src/filter/: filter.rs  filter_threshold.rs  mod.rs
src/networking/: net_samples.js  tcp_server.rs  udp_server.rs
src/obsolete/: analyze_fft.rs  example.rs  interval.rs  sin_buf.rs
src/presentation/: ui_app.rs
src/profinet/: mod.rs  parse_point.rs
src/profinet/s7/: mod.rs  s7_client.rs  s7_error.rs  s7_parse_bool.rs  s7_parse_int.rs  s7_parse_real.rs
src/s7/: mod.rs  s7_client.rs  s7_client_.rs  s7_error.rs  s7_lib.rs
src/s7/ds/: ds_db.rs
