[package]
name = "rpi_fft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "^0.10"
rustfft = "^6.1"
heapless = "^0.7"
egui = "^0.22"
eframe = "^0.22"
num = "^0.4"
chrono = "^0.4"
ringbuf = "^0.3"
crossbeam-channel = "^0.5"
flume = "^0.10"
concurrent-queue = "^2.2"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = "^3.0"

snap7 = "^0.0.1"
snap7-sys = "^0.1.4"

# [[example]]
# name = "test_queue" # examples/test_queue.rs
# [[example]]
# name = "test_channel" # examples/test_channel.rs
# [[example]]
# name = "test_treadsafe_queue" # examples/test_treadsafe_queue.rs