[package]
name = "rpi_fft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
env_logger = "^0.11"

sal-sync = { git = "https://github.com/a-givertzman/rust-sal-sync.git", tag = "0.0.3" }

once_cell = "^1.20"

indexmap = "^2.7"
rustfft = "^6.2"
heapless = "^0.8"
num = "^0.4"
chrono = "^0.4"
ringbuf = "^0.4"
crossbeam-channel = "^0.5"
flume = "^0.11"
concurrent-queue = "^2.5"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = "^3.12"

egui = "^0.31"
eframe = "^0.31"
egui_plot = "^0.31"

snap7 = "^0.0.1"
snap7-sys = "^0.1.4"

# [[example]]
# name = "test_queue" # examples/test_queue.rs
# [[example]]
# name = "test_channel" # examples/test_channel.rs
# [[example]]
# name = "test_treadsafe_queue" # examples/test_treadsafe_queue.rs