[package]
name = "rpi_fft"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
env_logger = "~0.11"
rustfft = "~6.4"
heapless = "~0.8"
egui = "~0.32"
egui_plot = "~0.33"
eframe = "~0.32"
num = "~0.4"
chrono = "~0.4"
ringbuf = "~0.4"
flume = "~0.11"
concurrent-queue = "~2.5"

serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
serde_with = "~3.14"

#
# Tread safe
parking_lot = "~0.12"
once_cell = "~1.21"

# snap7 = "~0.0.1"
snap7-sys = "~0.1.5"

# [[example]]
# name = "test_queue" # examples/test_queue.rs
# [[example]]
# name = "test_channel" # examples/test_channel.rs
# [[example]]
# name = "test_treadsafe_queue" # examples/test_treadsafe_queue.rs